test/invalid-syntax/57163_no_arrow/no_arrow.mag
-- Author: 57163, Guilherme Dias
-- No complete arrow
fun noArrow (_) : Unit - Unit 
	print(1242*2)
